Refactor the structure and names of the files and folders

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="Stylesheet.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/bootstrap.css">
+    <link rel="stylesheet" href="./styles/stylesheet.css">
 </head>
 <body>
 
@@ -54,7 +54,7 @@
   <br>
 
   <div class="container" id="my-div-container" >
-      <img src="MyPicture.jpeg" class="img-fluid mx-auto d-block" id="profile-picture-style" alt="My picture" srcset="">
+      <img src="./img/myPicture.jpeg" class="img-fluid mx-auto d-block" id="profile-picture-style" alt="My picture" srcset="">
       <h1>Natalia Bebebino</h1>
       <p id="title">Software developer in progress</p>
   </div>
@@ -70,19 +70,19 @@
 
       <div class="col-sm-4">
         <a href="https://sparkly-tapioca-43911f.netlify.app/" target="_blank">
-          <img src="ToDoList.png" class="img-to-sites hover-picture" alt="ToDoList">
+          <img src="./img/toDoList.png" class="img-to-sites hover-picture" alt="ToDoList">
         </a>
       </div>
 
       <div class="col-sm-4">
         <a href="https://spontaneous-dasik-191587.netlify.app/" target="_blank">
-          <img src="WeatherChannel.png" class="img-to-sites hover-picture" alt="WeatherChannel">
+          <img src="./img/weatherChannel.png" class="img-to-sites hover-picture" alt="WeatherChannel">
         </a>
       </div>
 
       <div class="col-sm-4">
         <a href="https://lucky-meerkat-e9957d.netlify.app/" target="_blank">
-          <img src="ColorGame.png" class="img-to-sites hover-picture" alt="ColorGame">
+          <img src="./img/colorGame.png" class="img-to-sites hover-picture" alt="ColorGame">
         </a>
       </div>
 
@@ -163,7 +163,7 @@
   
           <p>
           <a href="https://www.linkedin.com/in/natalia-bebebino-7b31a246" target="blank">
-            <img src="linkedin.svg" alt="linkedIn-icon" height="30" width="30" id="linkedIn-icon">
+            <img src="./img/linkedin.svg" alt="linkedIn-icon" height="30" width="30" id="linkedIn-icon">
           </a>
 
           </p>
