Reschuffle portfolio items

--- a/index.html
+++ b/index.html
@@ -98,18 +98,15 @@
       <div class="col-sm-6">
         <div class="portfolio-card">
           <figure>
-            <img src="./img/rockPaperScissors.png" alt="WeatherChannel">
+            <img src="./img/BBT-TODO.png" alt="e-commerce">
             <div class="capa">
-              <h3>Rock, paper, scissors!</h3>
+              <h3>BBT-TODO</h3>
               <p class="h5" style="margin: 10px;">
-                I built this game with HTML, CSS and JavaScript. It's the traditional "Rock, paper, scissors" game.
+                This is an e-commerce we built in a group of 6 student developers using Material UI, React.js and Node.js among other technologies. It's still under improvement but you can visit the code in the meantime and run it on localhost.
               </p>
               <br>
-              <a href="https://github.com/NataliaBebebino/odin-Rock.Paper.Scissors-FullGame" target="blank">
+              <a href="https://github.com/PedroAgustinBauso/e-commerce" target="blank">
                 <button class="btn btn-info" style="width: 80px;">GitHub</button>
-              </a>
-              <a href="https://nataliabebebino.github.io/odin-Rock.Paper.Scissors-FullGame/" target="blank">
-                <button class="btn btn-info" style="width: 80px;">Site</button>
               </a>
             </div>
           </figure>
@@ -121,19 +118,15 @@
       <div class="col-sm-6">
         <div class="portfolio-card">
           <figure>
-            <img src="./img/colorGame.png" alt="ColorGame">
+            <img src="./img/MyAppointments.png" alt="AppointmentsApp">
             <div class="capa">
-              <h3>Color Game</h3>
+              <h3>My appointments</h3>
               <p class="h5" style="margin: 10px;">
-                It's a game I built with HTML, CSS and JavaScript where you have to guess the color given a color in RGB
-                format.
+                This is a booking appointment app we built in a group of 5 student developers using Chakra UI, Next.js and MongoDB among other technologies. It's still under improvement but you can visit the code in the meantime and run it on localhost.
               </p>
               <br>
-              <a href="https://github.com/NataliaBebebino/ColorGame" target="blank">
+              <a href="https://github.com/romerocam/cruce" target="blank">
                 <button class="btn btn-info" style="width: 80px;">GitHub</button>
-              </a>
-              <a href="https://lucky-meerkat-e9957d.netlify.app/" target="blank">
-                <button class="btn btn-info" style="width: 80px;">Site</button>
               </a>
             </div>
           </figure>
@@ -201,6 +194,31 @@
                 <button class="btn btn-info" style="width: 80px;">GitHub</button>
               </a>
               <a href="https://spontaneous-dasik-191587.netlify.app/" target="blank">
+                <button class="btn btn-info" style="width: 80px;">Site</button>
+              </a>
+            </div>
+          </figure>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="portfolio-card">
+          <figure>
+            <img src="./img/colorGame.png" alt="ColorGame">
+            <div class="capa">
+              <h3>Color Game</h3>
+              <p class="h5" style="margin: 10px;">
+                It's a game I built with HTML, CSS and JavaScript where you have to guess the color given a color in RGB
+                format.
+              </p>
+              <br>
+              <a href="https://github.com/NataliaBebebino/ColorGame" target="blank">
+                <button class="btn btn-info" style="width: 80px;">GitHub</button>
+              </a>
+              <a href="https://lucky-meerkat-e9957d.netlify.app/" target="blank">
                 <button class="btn btn-info" style="width: 80px;">Site</button>
               </a>
             </div>
