Add downloadable CV

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       srcset="">
     <h1>Natalia Bebebino</h1>
     <p id="title">Full-stack developer</p>
+    <a href="./img/CV.pdf" download="CV" target="blank">
+      <button class="btn btn-info">Download CV</button>
+    </a>
   </div>
 
 
@@ -81,7 +84,8 @@
             <div class="capa">
               <h3>The show digger</h3>
               <p class="h5" style="margin: 10px;">
-                It's a movie/ TV show finder that consumes TMDB API. I built it using Bootstrap, React.js and Node.js among other technologies.
+                It's a movie/ TV show finder that consumes TMDB API. I built it using Bootstrap, React.js and Node.js
+                among other technologies.
               </p>
               <br>
               <a href="https://github.com/NataliaBebebino/tmdb-app" target="blank">
@@ -102,7 +106,9 @@
             <div class="capa">
               <h3>BBT-TODO</h3>
               <p class="h5" style="margin: 10px;">
-                This is an e-commerce we built in a group of 6 student developers using Material UI, React.js and Node.js among other technologies. It's still under improvement but you can visit the code in the meantime and run it on localhost.
+                This is an e-commerce we built in a group of 6 student developers using Material UI, React.js and
+                Node.js among other technologies. It's still under improvement but you can visit the code in the
+                meantime and run it on localhost.
               </p>
               <br>
               <a href="https://github.com/PedroAgustinBauso/e-commerce" target="blank">
@@ -122,7 +128,9 @@
             <div class="capa">
               <h3>My appointments</h3>
               <p class="h5" style="margin: 10px;">
-                This is a booking appointment app we built in a group of 5 student developers using Chakra UI, Next.js and MongoDB among other technologies. It's still under improvement but you can visit the code in the meantime and run it on localhost.
+                This is a booking appointment app we built in a group of 5 student developers using Chakra UI, Next.js
+                and MongoDB among other technologies. It's still under improvement but you can visit the code in the
+                meantime and run it on localhost.
               </p>
               <br>
               <a href="https://github.com/romerocam/cruce" target="blank">
