Correct About me

--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
       decided to sign up for Plataforma 5 Coding Bootcamp where I spent more than 800 hours learning by doing, building
       projects individually and with fellow students.</p>
     <p>Working as an accountant at an international company has trained me to become a very detail-oriented person and
-      has given me invaluable experience in virtual, multi-cultural environments.</p>
-    <p>Additionally, during my tenure as an accountant at SAP, I could observe processes, find ways of doing things
-      better and automate repetitive tasks through Microsoft Excel macros.</p>
+      has given me invaluable experience in virtual and multi-cultural environments.</p>
+    <p>Additionally, during my tenure as an accountant at SAP, I analyzed processes, found ways of doing things
+      better and automated repetitive tasks through Microsoft Excel macros.</p>
   </div>
 
 
